--- a/test-app/app/index.html
+++ b/test-app/app/index.html
@@ -44,7 +44,7 @@
         <!-- endbower -->
         <!-- endbuild -->
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.  
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -52,10 +52,12 @@
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-
+        </script>  -->
+        <!-- ref:remove -->
+        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+        <!-- endref -->
         <!-- build:js({app,.tmp}) scripts/main.js -->
-        <script src="scripts/main.js"></script>
+        <!-- <script src="../dist/scripts/main.js"></script> -->
         <!-- endbuild -->
 </body>
 </html>
